fix container,gap portfolio and team

--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,17 @@
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -554,7 +554,7 @@ img {
   background-color: #188ce8;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .about__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -588,9 +588,6 @@ img {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
-}
-.about .about__list__item:not(:first-child) {
-  margin-left: 30px;
 }
 .about .about__title {
   line-height: 1.17;
@@ -738,20 +735,6 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-@media screen and (min-width: 1200px) {
-  .team__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-top: 16px;
-  }
 }
 
 .social__list {
@@ -935,6 +918,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .breadcrumbs__list {
+    gap: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -967,15 +951,16 @@ img {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
-.breadcrumbs__elements:not(:nth-child(10n)) {
+.breadcrumbs__elements:not(:nth-child(9n)) {
   margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .breadcrumbs__elements {
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
-    margin-bottom: 30px;
-    margin-right: 30px;
+  }
+  .breadcrumbs__elements:not(:nth-child(9n)) {
+    margin-bottom: 0px;
   }
   .breadcrumbs__elements:nth-child(2n) {
     margin-right: 0px;
@@ -986,10 +971,6 @@ img {
     display: block;
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
-  }
-  .breadcrumbs__elements:not(:nth-child(3n)) {
-    margin-right: 30px;
-    margin-bottom: 30px;
   }
 }
 
