--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -15,12 +15,12 @@
   margin-right: auto;
   // outline: 2px solid red;
   @include mobile {
-    width: 480px;
+    max-width: 480px;
   }
   @include tablet {
-    width: 768px;
+    max-width: 768px;
   }
   @include desktop {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
