--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     &__item:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -28,9 +28,9 @@
     @include desktop {
       flex-wrap: nowrap;
     }
-    &__item:not(:first-child) {
-      margin-left: 30px;
-    }
+    // &__item:not(:first-child) {
+    //   margin-left: 30px;
+    // }
   }
   .about__title {
     @include tablet {
